Created Users, its roles, and their respected dashboards along with service authentication with firebase and just restructured the files